General fix for layout overflow and responsive video

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -1,5 +1,8 @@
 /*======== Landing Viewport wrapper ========*/
 .landing-viewport-wrap{
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
   width: 100%;
   height: auto;
   box-shadow: inset 0 80px 100px rgba($black, 0.6);
@@ -9,17 +12,23 @@
     z-index: -1;
     top: 50%;
     left: 50%;
-    max-width: 100%;
+    min-width: 100%;
+    max-width: auto;
     min-height: 100%;
     width: auto;
     height: auto;
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     background-size: cover;
+    @include media(">=xl"){
+      min-width: 100%;
+      max-width: auto;
+    }
   }
 
   @include media("<sm"){
-    background-color: $orange;
+    //background-color: $orange;
+    box-shadow: none;
   }
 }
 
@@ -29,7 +38,6 @@ nav[role="main-nav"]{
 	height: 10vh;
 
 	.navbar-brand{
-		//margin-right: rem-calc(50);
     padding-top: 0;
 		font-size: rem-calc(30);
 		font-weight: bold;
@@ -51,9 +59,11 @@ nav[role="main-nav"]{
   height: 80vh;
   margin-bottom: 0;
   display: table;
+  width: 100%;
 
   & .inner{
     display: table-row;
+    text-align: center;
   }
 
   & h2, p{
@@ -67,7 +77,7 @@ nav[role="main-nav"]{
     display: block;
     margin-top: 30vh;
     font-size: 5rem;
-    @include media('<=sm'){
+    @include media('<sm'){
       font-size: 3rem;
     }
   }
@@ -80,7 +90,16 @@ nav[role="main-nav"]{
   }
 
   & form{
-
+   
+    & .input-group-addon{
+      background-color: #38C1C1;
+      color: $white;
+      border: #38C1C1;
+      &:hover{
+        background-color: darken(#38C1C1, 20%);
+        cursor: pointer;
+      }
+    }
 
     @include media("<=sm"){
       margin: 1rem 3rem auto 3rem;
